# openrouter-fusion-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: opencode.json
examples/skill/fusion/: SKILL.md
src/fusion_agent/: __init__.py  __main__.py  budget.py  cli.py  discovery.py  errors.py  fusion.py  http.py  install.py  presets.py  render.py  server.py
src/fusion_agent/data/: opencode.json  skill.md
tests/: conftest.py  test_budget.py  test_discovery.py  test_fusion.py  test_install.py  test_presets.py
