[project]
name = "openrouter-fusion-agent"
version = "0.2.0"
description = "Multi-model deliberation agent for OpenRouter Fusion on free models — CLI + MCP server for opencode"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chumikov", email = "chumikov.dv@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["openrouter", "fusion", "mcp", "agent", "llm", "opencode", "multi-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.27",
    "anyio>=4",
]

[project.urls]
Homepage = "https://github.com/Chumikov/openrouter-fusion-agent"
Repository = "https://github.com/Chumikov/openrouter-fusion-agent"
Issues = "https://github.com/Chumikov/openrouter-fusion-agent/issues"

[project.scripts]
fusion-agent = "fusion_agent.cli:main"
# Alias matching the package name so `uvx openrouter-fusion-agent` works out of the box.
openrouter-fusion-agent = "fusion_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/fusion_agent"]
